--- a/templates/index.html
+++ b/templates/index.html
@@ -108,6 +108,6 @@
   </div>
 
   <div id="predictionResult" class="container mt-2 py-5"></div>
-  <script src="{{ url_for('static', filename='script/app.js') }}" defer></script>
+  <script src="{{ url_for('static', filename='Script/app.js') }}" defer></script>
 </body>
 </html>
