Added margin-top to index

--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
     <!-- 🎯 ROI Based Movie Section -->
     <div id="roiSection" class="form-section">
       <h2>🎯 ROI Based Movie</h2>
-      <div class="input-group mb-3">
+      <div class="input-group mb-3 mt-3">
         <input
           type="text"
           id="recoGenreInput"
