Added another margin

--- a/templates/index.html
+++ b/templates/index.html
@@ -110,12 +110,12 @@
     </form>
 
     <!-- Prediction Result -->
-    <div id="predictionResult" class="d-none"></div>
+    <div id="predictionResult" class="d-none mb-2"></div>
 
     <!-- 🎯 ROI Based Movie Section -->
     <div id="roiSection" class="form-section">
       <h2>🎯 ROI Based Movie</h2>
-      <div class="input-group mb-3 mt-3">
+      <div class="input-group mb-3">
         <input
           type="text"
           id="recoGenreInput"
