--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
           <input type="number" name="budget" class="form-control" required>
         </div>
         <div class="col-md-6">
-          <label class="form-label">Opening Weekend Gross</label>
+          <label class="form-label">Opening Weekend Gross Domestically </label>
           <input type="text" name="opening_weekend_gross" class="form-control" placeholder="e.g. $7,061,513" required>
         </div>
       </div>
